# simbir_practice

./: .env.dev  .gitignore  docker-compose.yml  readme.md
api/: .env.dev  openapi.yaml  pyproject.toml
api/api/: mailing.py  main.py  monitoring.py  routes.py  settings.py
api/api/auth/: client.py  decorator.py  mail_token.py  views.py
api/api/goods/: client.py  views.py
goods/: requirements.txt
goods/goods/: settings.py  urls.py
goods/goods_service/: apps.py  models.py  serializers.py  urls.py  views.py
goods/goods_service/migrations/: 0001_initial.py  0001_squashed_0003_remove_advertimage_deleted_at.py  0001_squashed_0004_auto_20200723_1012.py  0001_squashed_0015_auto_20200721_1055.py  0002_advert_author_squashed_0003_advertimage_author.py  0002_auto_20200718_2312.py  0003_auto_20200718_2338.py  0004_auto_20200719_0900.py  0005_advertimage.py  0006_auto_20200719_1208.py  0007_auto_20200719_1431.py  0008_auto_20200719_1450.py  0009_auto_20200719_1544.py  0010_auto_20200719_1544.py  0011_auto_20200719_1547.py  0012_auto_20200719_1552.py  0013_auto_20200719_1636.py  0014_auto_20200719_1802.py
mailing/: .env.dev  .env.dev.example  Dockerfile  pyproject.toml
mailing/migrations/: env.py
mailing/migrations/versions/: 11014ce241a6_subject.py  398d512c4727_init.py  9bb9ad459d31_init.py
mailing/src/mailing/: config.py  mail.py  main.py  models.py  rabbit.py  views.py
monitoring/: .env.dev  Dockerfile  pyproject.toml  startserver.sh
monitoring/migrations/: env.py
monitoring/migrations/versions/: fc10483b36c9_init.py
monitoring/src/monitoring/: celery.py  celeryapp.py  main.py  models.py  tasks.py  views.py
pg_init/: create-multiple-postgresql-databases.sh
user_auth/: Dockerfile  alembic.ini  requirements.txt  setup.py
user_auth/alembic/: env.py
user_auth/alembic/versions/: 062c69d060c4_init.py  (+1 more)
user_auth/app/: db.py  exceptions.py  jwt_pair.py  main.py  models.py  routes.py  settings.py  users.py  views.py
