[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nikita"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
cchardet = "^2.1.6"
aiodns = "^2.0.0"
aiohttp-devtools = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
