[tool.poetry]
name = "mailing"
version = "0.1.0"
description = ""
authors = ["NikitaZ"]

[tool.poetry.dependencies]
python = "^3.8"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.60.1"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
psycopg2-binary = "^2.8.5"
pydantic = {extras = ["email"], version = "^1.6.1"}
aiosmtplib = "^1.1.3"
aio-pika = "^6.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
