[tool.poetry]
name = "monitoring"
version = "0.1.0"
description = ""
authors = ["NikitaZ"]

[tool.poetry.dependencies]
python = "^3.8"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
alembic = "^1.4.2"
psycopg2-binary = "^2.8.5"
celery = "^4.4.7"
celery-pool-asyncio = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
